# hyperagent

./: CHANGELOG.md  Justfile  package-lock.json  package.json  vitest.config.ts
.claude/: CLAUDE.md
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: skills.instructions.md  tests.instructions.md
.github/workflows/: auto-merge-dependabot.yml  pr-validate.yml  publish.yml
builtin-modules/: doc-core.json  ooxml-core.json  pdf-charts.json  pdf.json  pptx-charts.json  pptx-tables.json  pptx.json  tsconfig.json
builtin-modules/src/: doc-core.ts  ooxml-core.ts  pdf-charts.ts  pdf.ts  pptx-charts.ts  pptx-tables.ts  pptx.ts  shared-state.ts
docs/: DEVELOPMENT.md  MODULES.md
docs/design/: MCP-INTEGRATION-DESIGN.md  MCP-THREAT-MODEL.md  QUALITY-LOOP-PLAN.md
patterns/file-generation/: PATTERN.md
scripts/: auto-approve-dependabot.sh  build-binary.js  run-pdf-prompts.sh
skills/: CLAUDE.md
skills/pdf-expert/: SKILL.md
skills/pptx-expert/: SKILL.md
src/agent/: format-exports.ts  index.ts  state.ts  system-message.ts  version.ts
src/code-validator/guest/runtime/: Cargo.toml
src/code-validator/guest/runtime/src/: js_parser.rs  lib.rs  metadata.rs  plugin_scan.rs  validator.rs
src/plugin-system/: manager.ts  types.ts
tests/: CLAUDE.md  docgen-modules.test.ts  hyperlight-host-module.test.ts  pdf-charts.test.ts  pdf-content.test.ts  pdf-core.test.ts  pdf-fonts.test.ts  pdf-visual.test.ts  plugin-manager.test.ts  pptx-readability.test.ts  pptx-safety.test.ts  pptx-validation.test.ts  xref-verify.test.ts
tests/pdf-prompts/: _feedback-instructions.txt  data-dashboard.yaml  letter.yaml  (+10 more)
(+10 files in other folders)
